--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#"><img src="./images/box-seam.svg" alt="brandIcon" height="30px">
+      <a class="navbar-brand" href="#"><img src="./svgImages/box-seam.svg" alt="brandIcon" height="30px">
         Move It</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -77,7 +77,7 @@
       <div class="feature col">
         <div
           class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-          <img src="./images/briefcase.svg" alt="briefcase" height="30px" />
+          <img src="./svgImages/briefcase.svg" alt="briefcase" height="30px" />
         </div>
         <h3 class="fs-2 text-body-emphasis">Professional</h3>
         <p>Our team of professional movers are trained to prioritize efficiency, organization, and attention to detail.
@@ -93,7 +93,7 @@
       <div class="feature col">
         <div
           class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-          <img src="./images/bus-front.svg" alt="bus-front" height="30px" />
+          <img src="./svgImages/bus-front.svg" alt="bus-front" height="30px" />
         </div>
         <h3 class="fs-2 text-body-emphasis">Countrywide</h3>
         <p>We offer a range of services to suit your individual needs, whether you're moving locally or across the
@@ -108,7 +108,7 @@
       <div class="feature col">
         <div
           class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-          <img src="./images/chat-square-heart.svg" alt="chat-square-heart" height="30px" />
+          <img src="./svgImages/chat-square-heart.svg" alt="chat-square-heart" height="30px" />
         </div>
         <h3 class="fs-2 text-body-emphasis">Personal Touch</h3>
         <p>At our core, we believe that moving should be an exciting and positive experience, not a stressful one. By
