--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
           class="btn btn-primary btn-lg px-4 me-sm-3">Get a Quote</button> <button type="button"
           class="btn btn-outline-secondary btn-lg px-4">Contact Us</button> </div>
     </div>
-    <div class="overflow-hidden" style="max-height: 30vh;">
-      <div class="container px-5"> 
-        <img src="./moving-van.jpg" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image" width="700" height="500" loading="lazy">
-        </div>
+    <div>
+      <div class="container px-5">
+        <img src="./moving-van.jpg" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image" loading="lazy">
+      </div>
     </div>
   </div>
 
